--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -86,12 +86,13 @@ $pink: #BC3E6D;
 	border: 1px solid transparent;
 	border-radius: 5px;
 	cursor: pointer;
-	z-index: 2;
+	z-index: 2;	
+	transition:  250ms ease-in-out;
 	&:hover {
 		transition: 0.5s;
 		background-color: whitesmoke;
 		color: black;
-		border: 2px solid black;
+		border: 1px solid black;
 	}
 
 	&:focus {
@@ -250,7 +251,7 @@ $pink: #BC3E6D;
 			font-size: 3em;
 			font-weight: bold;
 			letter-spacing: 0.15em;
-			margin-left: 0.5em;
+			margin-left: 0.25em;
 
 			@include breakpoint (md) {
 				margin-left: 0;
